# slq

./: .clang-tidy  .envrc.example  .gitignore  Cargo.toml  Makefile  README.md  compile_commands.json  configure  install.sh  slq.1  test.sh
benchmarks/: README.md  SUMMARY.md  benchmark.sh  compile_benchmark.sh  simple_benchmark.sh
benchmarks/results/: benchmark_20250911_002832.md  simple_benchmark_20250911_003100.md  simple_benchmark_20250911_003128.md
c-version/: .gitignore  IMPLEMENTATION_COMPARISON.md  Makefile  README.md
c-version/src/: cli.h  client.h  main.c
change-proposals/: README.md  journey-planning.md
data/: sites.json
scripts/: dev.sh  install.rs  install.sh  publish.sh  test-blackbox.sh  test-cli.sh  test-integration.sh
src/: cli.c  cli.rs  client.c  client.h  client.rs  main.c  main.rs  types.c  types.h  types.rs
src-old/: cli.h
tests/: test-cli.sh  test.sh
