[package]
name = "slq"
version = "0.4.1"
edition = "2024"
description = "Search stockholms lokaltrafik for stations and times in the command line"
authors = ["Divan Visagie <me@divanv.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/divanvisagie/slq"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
deunicode = "1.6.2"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["parsing", "formatting", "local-offset"] }
